tests/errors/name-typo/main.pa
def length = 5

def main = lenght
